--- a/XCode/DewertOkin/DewertOkin/RemoteControl/SecondRemote.storyboard
+++ b/XCode/DewertOkin/DewertOkin/RemoteControl/SecondRemote.storyboard
@@ -77,13 +77,13 @@
                                 </accessibility>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="scI-cv-eGy">
-                                <rect key="frame" x="344" y="64" width="50" height="50"/>
+                                <rect key="frame" x="344" y="84" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="NKo-uV-5ug"/>
                                     <constraint firstAttribute="height" constant="50" id="v65-2M-8XN"/>
                                 </constraints>
                                 <connections>
-                                    <segue destination="2i9-pd-CzF" kind="presentation" modalPresentationStyle="overFullScreen" modalTransitionStyle="coverVertical" id="SgC-u1-H4w"/>
+                                    <segue destination="2i9-pd-CzF" kind="presentation" modalPresentationStyle="overFullScreen" modalTransitionStyle="flipHorizontal" id="SgC-u1-H4w"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -98,7 +98,7 @@
                             <constraint firstItem="DnC-Xu-Jbg" firstAttribute="top" secondItem="A7b-hz-zBK" secondAttribute="top" constant="120" id="A6W-m5-we5"/>
                             <constraint firstItem="XRq-Gx-E26" firstAttribute="top" secondItem="J9R-PK-aQG" secondAttribute="top" id="EbH-pF-aSa"/>
                             <constraint firstItem="J9R-PK-aQG" firstAttribute="leading" secondItem="uty-hF-LTZ" secondAttribute="leading" constant="10" id="IF6-tE-hn4"/>
-                            <constraint firstItem="scI-cv-eGy" firstAttribute="top" secondItem="uty-hF-LTZ" secondAttribute="top" constant="20" id="ILW-Fn-p25"/>
+                            <constraint firstItem="scI-cv-eGy" firstAttribute="top" secondItem="uty-hF-LTZ" secondAttribute="top" constant="40" id="ILW-Fn-p25"/>
                             <constraint firstItem="kEo-gs-uD4" firstAttribute="width" secondItem="J9R-PK-aQG" secondAttribute="width" multiplier="0.5" id="IUL-NS-rma"/>
                             <constraint firstItem="uty-hF-LTZ" firstAttribute="trailing" secondItem="DnC-Xu-Jbg" secondAttribute="trailing" constant="10" id="JpN-9I-Z99"/>
                             <constraint firstItem="FEt-Ft-Val" firstAttribute="top" secondItem="uty-hF-LTZ" secondAttribute="top" constant="70" id="KSd-AP-Rdk"/>
