--- a/XCode/DewertOkin/DewertOkin/Devices/Devices.storyboard
+++ b/XCode/DewertOkin/DewertOkin/Devices/Devices.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="2vF-NN-zR7">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,11 +15,20 @@
             <objects>
                 <viewController storyboardIdentifier="DevicesList" useStoryboardIdentifierAsRestorationIdentifier="YES" id="2vF-NN-zR7" customClass="DevicesListViewController" customModule="DewertOkin" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="XSy-0J-TZL">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="JTQ-dv-o1y">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5Y6-EX-6ay">
+                                <rect key="frame" x="0.0" y="44" width="414" height="0.0"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="CW4-LG-nsV"/>
+                                </constraints>
+                                <items>
+                                    <navigationItem title="Title" id="a7V-Oj-MQn"/>
+                                </items>
+                            </navigationBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="JTQ-dv-o1y">
+                                <rect key="frame" x="0.0" y="97" width="414" height="765"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
                         </subviews>
@@ -27,8 +36,12 @@
                         <constraints>
                             <constraint firstItem="awo-UE-uw2" firstAttribute="trailing" secondItem="JTQ-dv-o1y" secondAttribute="trailing" id="CKf-EO-EfZ"/>
                             <constraint firstItem="JTQ-dv-o1y" firstAttribute="top" secondItem="awo-UE-uw2" secondAttribute="top" id="LZw-gm-O0H"/>
+                            <constraint firstItem="JTQ-dv-o1y" firstAttribute="top" secondItem="5Y6-EX-6ay" secondAttribute="bottom" id="OGX-3I-mxi"/>
                             <constraint firstItem="JTQ-dv-o1y" firstAttribute="leading" secondItem="awo-UE-uw2" secondAttribute="leading" id="Oxs-BX-IOz"/>
+                            <constraint firstItem="5Y6-EX-6ay" firstAttribute="leading" secondItem="awo-UE-uw2" secondAttribute="leading" id="aiS-DA-nVe"/>
+                            <constraint firstItem="5Y6-EX-6ay" firstAttribute="trailing" secondItem="awo-UE-uw2" secondAttribute="trailing" id="vjY-ma-7rZ"/>
                             <constraint firstItem="awo-UE-uw2" firstAttribute="bottom" secondItem="JTQ-dv-o1y" secondAttribute="bottom" id="yLd-em-M1C"/>
+                            <constraint firstItem="5Y6-EX-6ay" firstAttribute="top" secondItem="awo-UE-uw2" secondAttribute="top" id="zkO-DN-tOA"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="awo-UE-uw2"/>
                     </view>
@@ -40,7 +53,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1vH-dE-sqm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2236" y="-309.89505247376314"/>
+            <point key="canvasLocation" x="2234.7826086956525" y="-310.04464285714283"/>
         </scene>
         <!--PairingSuccessView-->
         <scene sceneID="X8w-bf-kel">
