--- a/XCode/DewertOkin/DewertOkin/Explore/Explore.storyboard
+++ b/XCode/DewertOkin/DewertOkin/Explore/Explore.storyboard
@@ -75,7 +75,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cxu-jB-735" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2188" y="-275"/>
+            <point key="canvasLocation" x="2186.9565217391305" y="-275.22321428571428"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="nRC-Hw-6RA">
