--- a/XCode/DewertOkin/DewertOkin/RFPairing/RFPairing.storyboard
+++ b/XCode/DewertOkin/DewertOkin/RFPairing/RFPairing.storyboard
@@ -167,17 +167,29 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Please name your new device" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2Dw-Xj-Udh">
+                                <rect key="frame" x="30" y="722" width="354" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="qeE-kE-z4p"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="xQv-ZG-DJe" firstAttribute="top" secondItem="2Dw-Xj-Udh" secondAttribute="bottom" constant="20" id="4bq-zr-HHR"/>
                             <constraint firstItem="gSY-bD-zEV" firstAttribute="leading" secondItem="j80-RO-Y5y" secondAttribute="leading" constant="50" id="5wq-OB-crU"/>
                             <constraint firstItem="3LA-qP-4mq" firstAttribute="top" secondItem="j80-RO-Y5y" secondAttribute="top" constant="20" id="Cf5-YL-I1y"/>
                             <constraint firstItem="j80-RO-Y5y" firstAttribute="bottom" secondItem="xQv-ZG-DJe" secondAttribute="bottom" constant="50" id="ILa-J7-HgP"/>
                             <constraint firstItem="j80-RO-Y5y" firstAttribute="trailing" secondItem="gSY-bD-zEV" secondAttribute="trailing" constant="50" id="MHw-pg-da1"/>
                             <constraint firstItem="3LA-qP-4mq" firstAttribute="leading" secondItem="j80-RO-Y5y" secondAttribute="leading" constant="30" id="X59-zt-e5v"/>
                             <constraint firstItem="xQv-ZG-DJe" firstAttribute="leading" secondItem="j80-RO-Y5y" secondAttribute="leading" constant="50" id="XfN-Y8-NRo"/>
+                            <constraint firstItem="2Dw-Xj-Udh" firstAttribute="leading" secondItem="j80-RO-Y5y" secondAttribute="leading" constant="30" id="XlW-dv-dxe"/>
                             <constraint firstItem="Z1R-FZ-CjG" firstAttribute="centerX" secondItem="1Va-bd-XVM" secondAttribute="centerX" id="YKi-M9-BCc"/>
                             <constraint firstItem="xQv-ZG-DJe" firstAttribute="centerX" secondItem="1Va-bd-XVM" secondAttribute="centerX" id="cAV-Kd-JxS"/>
+                            <constraint firstItem="j80-RO-Y5y" firstAttribute="trailing" secondItem="2Dw-Xj-Udh" secondAttribute="trailing" constant="30" id="eXa-2N-tYc"/>
                             <constraint firstItem="j80-RO-Y5y" firstAttribute="trailing" secondItem="3LA-qP-4mq" secondAttribute="trailing" constant="30" id="l4d-nT-k1M"/>
                             <constraint firstItem="j80-RO-Y5y" firstAttribute="trailing" secondItem="Z1R-FZ-CjG" secondAttribute="trailing" constant="-450" id="mOc-4H-zxh"/>
                             <constraint firstItem="gSY-bD-zEV" firstAttribute="top" secondItem="3LA-qP-4mq" secondAttribute="bottom" constant="20" id="nw8-d6-MFT"/>
@@ -187,6 +199,7 @@
                         <viewLayoutGuide key="safeArea" id="j80-RO-Y5y"/>
                     </view>
                     <connections>
+                        <outlet property="deviceNameTextfield" destination="2Dw-Xj-Udh" id="Qbs-Wd-acR"/>
                         <outlet property="dottedCircleImage" destination="Z1R-FZ-CjG" id="51a-uQ-u39"/>
                         <outlet property="pairingView" destination="1Va-bd-XVM" id="zsW-rA-M5x"/>
                         <outlet property="proceedButton" destination="xQv-ZG-DJe" id="jSx-SW-6rd"/>
@@ -196,7 +209,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ury-ee-CjZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1790" y="140"/>
+            <point key="canvasLocation" x="1789.8550724637682" y="139.95535714285714"/>
         </scene>
     </scenes>
     <resources>
