--- a/XCode/DewertOkin/DewertOkin/RemoteControl/SecondRemote.storyboard
+++ b/XCode/DewertOkin/DewertOkin/RemoteControl/SecondRemote.storyboard
@@ -182,13 +182,29 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="juo-wE-p6M">
+                                                <rect key="frame" x="82" y="493" width="250" height="50"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="50" id="Tzv-T3-osS"/>
+                                                    <constraint firstAttribute="width" constant="250" id="o3q-6B-afS"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <state key="normal" title="discover more accessories">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="exploreButtonAction:" destination="dhz-n7-KIU" eventType="touchUpInside" id="1S9-I6-JWE"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstItem="QY1-Dg-M6w" firstAttribute="leading" secondItem="iOZ-QQ-O6V" secondAttribute="leading" constant="50" id="7me-Iq-NLW"/>
                                             <constraint firstAttribute="trailing" secondItem="QY1-Dg-M6w" secondAttribute="trailing" constant="50" id="FLw-pt-7Nq"/>
+                                            <constraint firstItem="juo-wE-p6M" firstAttribute="centerX" secondItem="iOZ-QQ-O6V" secondAttribute="centerX" id="YjC-lr-9Ta"/>
                                             <constraint firstItem="QY1-Dg-M6w" firstAttribute="centerY" secondItem="iOZ-QQ-O6V" secondAttribute="centerY" id="bTL-Up-hYy"/>
                                             <constraint firstItem="QY1-Dg-M6w" firstAttribute="centerX" secondItem="iOZ-QQ-O6V" secondAttribute="centerX" id="iFd-VS-qee"/>
+                                            <constraint firstAttribute="bottom" secondItem="juo-wE-p6M" secondAttribute="bottom" constant="175" id="iyF-4R-rwU"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -221,6 +237,7 @@
                     <connections>
                         <outlet property="backButton" destination="ydd-5b-u6c" id="qPS-CA-9jL"/>
                         <outlet property="contentView" destination="iOZ-QQ-O6V" id="Dkm-H6-Vni"/>
+                        <outlet property="exploreButton" destination="juo-wE-p6M" id="lFA-oJ-KDf"/>
                         <outlet property="globalView" destination="bVY-Xs-AHm" id="scp-0U-TGz"/>
                         <outlet property="noFunctionsLabel" destination="QY1-Dg-M6w" id="fgB-k6-5p3"/>
                         <outlet property="view" destination="bVY-Xs-AHm" id="0I4-Xy-XzV"/>
