--- a/XCode/DewertOkin/DewertOkin/Base.lproj/LaunchScreen.storyboard
+++ b/XCode/DewertOkin/DewertOkin/Base.lproj/LaunchScreen.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,18 +15,20 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="okinSmartRemote" translatesAutoresizingMaskIntoConstraints="NO" id="Wsu-wL-Uib">
-                                <rect key="frame" x="67" y="213" width="241" height="241"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo-app" translatesAutoresizingMaskIntoConstraints="NO" id="Wsu-wL-Uib">
+                                <rect key="frame" x="82" y="323" width="250" height="250"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="250" id="G6Q-q9-NQA"/>
+                                    <constraint firstAttribute="width" constant="250" id="bn7-nD-GB8"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="Wsu-wL-Uib" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="1Tx-OH-ULi"/>
-                            <constraint firstItem="Wsu-wL-Uib" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="193" id="5Rf-PZ-XvX"/>
-                            <constraint firstItem="Wsu-wL-Uib" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="67" id="7Ry-FA-4rB"/>
                             <constraint firstItem="Wsu-wL-Uib" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="97t-8t-yKO"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -38,6 +40,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="okinSmartRemote" width="690" height="690"/>
+        <image name="logo-app" width="3810.239990234375" height="3810.719970703125"/>
     </resources>
 </document>
