--- a/XCode/DewertOkin/DewertOkin/Settings and more/Settings/SettingsMore.storyboard
+++ b/XCode/DewertOkin/DewertOkin/Settings and more/Settings/SettingsMore.storyboard
@@ -42,17 +42,8 @@
                         </connections>
                     </tableView>
                     <tabBarItem key="tabBarItem" systemItem="more" id="BXt-Di-Qcv"/>
-                    <navigationItem key="navigationItem" id="fOH-g0-Gdv">
-                        <barButtonItem key="rightBarButtonItem" title="Item" id="QKf-gA-i0c">
-                            <connections>
-                                <action selector="barButtonClicked:" destination="YY3-ND-2xW" id="vCR-XS-S6K"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" id="fOH-g0-Gdv"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                    <connections>
-                        <outlet property="barButtonItem" destination="QKf-gA-i0c" id="OwQ-WS-FZP"/>
-                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yES-7P-lQf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -64,6 +55,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="qZC-yE-ngW" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="G58-07-IXq">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
